--- a/cart.html
+++ b/cart.html
@@ -444,6 +444,6 @@
 	<script src="js/jquery.scrollUp.min.js"></script>
     <script src="js/jquery.prettyPhoto.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/cart.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
